# CPPNH

./: .gitignore  helloworld.cpp
Lab1/: helloworld.cpp
Lab2/: casting.cpp  constdirective.cpp  helloworld.cpp  incrementodecremento.cpp  operadormatematica.cpp  varandconst.cpp
Lab3/: algorithm.cpp  arraysimple.cpp  bublesort.cpp  busquedaarreglo.cpp  cstringsimple.cpp  datos.txt  dowhilesimple.cpp  fstream.cpp  helloworld.cpp  ifsimple.cpp  matriz.cpp  sumarreglos.cpp  switchsimple.cpp  trigosimple.cpp  vectorsimple.cpp  whilesimple.cpp
Lab4/: elahorcado.cpp  helloworld.cpp  parampunt.cpp  paramref.cpp  paramvalor.cpp  qtsample.cpp
Lab5/: cnstpointer.cpp  memoryleaks.cpp  punterosarreglos.cpp  punterosgenerico.cpp  sharepointer.cpp  uniquepointer.cpp  voidpointer.cpp  weakpointer.cpp
Lab6/estructurada/: bd.txt  db.txt  main.cpp
Lab6/modular/: main.cpp  tasklist.cpp  tasklist.h  (+1 more)
Lab7/: poo.cpp  postgresdata.cpp  postgresdelete.cpp  postgresql.cpp  postgresselect.cpp  postgresupdate.cpp  yankenpopoo.cpp
Lab8/: bubblesort.cpp  colas.cpp  colasstd.cpp  datos.json  datos.xml  debianmongo.cpp  dicons.cpp  diproperty.cpp  dliststd.cpp  example.txt  example.xml  gafstream.cpp  gaifstream.cpp  gaofstream.cpp  jsonmanagement.cpp  linkedlist.cpp  nuevoExample.txt  pila.cpp  pilastd.cpp  quicksort.cpp  stdqsortarr.cpp  stdqsortmej.cpp  stdqsortvec.cpp  xmlmanagement.cpp
Lab9/: error.cpp  excepciones.cpp
Lab9/multiclass/: CMakeLists.txt
Lab9/multiclass/include/: Person.h  Student.h  Teacher.h
Lab9/multiclass/src/: Main.cpp  Person.cpp  Student.cpp  Teacher.cpp
(+16 files in other folders)
